<resources>
    <string name="app_name">The Animal Game</string>
    <string name="text_title">The Animal Game</string>
    <string name="quit">quit</string>
    <string name="action_settings">Settings</string>
    <string name="rules">Rules</string>
    <string name="start">Start</string>
    <string name="player_name">Player name:</string>
    <string name="num_of_players">Number of players:</string>
    <string name="num_players_text">0</string>
    <string name="player_one">Player 1</string>
    <string name="add_player">Add player</string>
    <string name="players">Players</string>
    <string name="playerName_text">playername</string>
    <string name="points">Points</string>
    <string name="points_no_colon">Points</string>
    <string name="numPoints_text">0</string>
    <string name="letter_text">A</string>
    <string name="animalName_text">enter animal name</string>
    <string name="verify">Verify</string>
    <string name="pass">pass</string>
    <string name="back">back</string>
    <string name="new_game">new game</string>
    <string name="next_letter">next letter</string>
    <string name="high_scores">high scores</string>
    <string name="high_scores_title">High Scores</string>
    <string name="cancel">Cancel</string>
    <string name="quit_game_message">Are you sure you want to quit the game?</string>
    <string name="yes">Yes</string>
    <string name="quit_game_dialog">Quit Game Alert</string>
    <string name="delete_animal_dialog">Delete Animal Alert</string>
    <string name="animal_list">Animal List</string>
    <string name="add_animal">Add</string>
    <string name="update_animal">Update</string>
    <string name="delete_animal">Delete</string>
    <string name="find_animal">Find Animal</string>
    <string name="default_animal_name">Give me a name!</string>
    <string name="default_fun_fact">Give me a fun fact!</string>
    <string name="no_animals_to_display">No animals to display!</string>
    <string name="add_animal_error_message">Animal already in database!</string>
    <string name="update_animal_name_already_used">Name is already in use!</string>
    <string name="missing_mandatory_parameters">Please enter an animal name.</string>
    <string name="load_database_error">Error populating database.</string>
    <string name="default_animal_picture">Animal picture</string>
    <string name="delete_animal_message">Are you sure you want to delete this animal?</string>
    <string name="delete_animal_error_message">Error deleting animal.</string>
    <string name="update_animal_error_message">Error updating animal.</string>
    <string name="invalid_animal_for_letter">This animal is invalid for the given letter!</string>
    <string name="animal_not_found">Animal not found.</string>
    <string name="animal_found">Animal found.</string>
    <string name="animal_already_played">Animal already played.</string>
    <string name="default_find_animal_text">Enter an animal to search for &#8230;</string>
    <string name="refresh">Refresh</string>
    <string name="pass_message">Are you sure you want to pass?</string>
    <string name="pass_alert_title">Pass Alert</string>
    <string name="played_animals_label">Played Animals</string>
    <string name="played_letters_label">Played Letters</string>
    <string name="end_of_turn">End of Turn</string>
    <string name="next_player">Next player!</string>
    <string name="choose_image_caption">Change animal image&#8230;</string>
    <string name="choose_letter_start">Input letter to start, or no letter for random letter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="update_fact">Update Fact!</string>
    <string name="reset_database_message">Are you sure you want to reset the animal database to the default animals?</string>
    <string name="reset_pass">Database reset completed.</string>
    <string name="reset_fail">Error when resetting database.</string>
    <string name="reset_start">Resetting database&#8230;</string>


</resources>
