<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.animalgame.fragment.AnimalEditFormFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/animalNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:ems="10"
            android:hint="@string/default_animal_name"
            android:inputType="textPersonName"
            android:textColor="#ff1f00ff"
            android:textSize="20sp" />

        <FrameLayout
            android:id="@+id/animalImageFrameLayout"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/animalImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/default_animal_picture"
                android:src="@mipmap/no_animal_image" />

            <TextView
                android:id="@+id/animalImageCaptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/choose_image_caption"
                android:textColor="@color/colorPrimaryDark" />
        </FrameLayout>

        <EditText
            android:id="@+id/funFactEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:ems="10"
            android:hint="@string/default_fun_fact"
            android:inputType="textPersonName"
            android:textColor="#ff1f00ff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/addAnimalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:background="@mipmap/button_animal"
            android:onClick="addAnimal"
            android:text="@string/add_animal"
            android:textColor="#ff1f00ff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/updateAnimalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:onClick="updateAnimal"
            android:background="@mipmap/button_animal"
            android:text="@string/update_animal"
            android:textColor="#ff1f00ff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/deleteAnimalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:onClick="deleteAnimal"
            android:background="@mipmap/button_animal"
            android:text="@string/delete_animal"
            android:textColor="#ff1f00ff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:background="@mipmap/button_animal"
            android:onClick="goToAnimalDatabaseScreen"
            android:text="@string/cancel"
            android:textColor="#ff1f00ff"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/animalIdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="" />
</FrameLayout>
