<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.animalgame.activity.AnimalMainActivity"
    android:background="#ffd0fffa">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playerName_text"
        android:layout_gravity="start|top"
        android:textSize="24sp"
        android:text="@string/playerName_text"
        android:textColor="#ff1f00ff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:id="@+id/points_text"
        android:layout_gravity="start|top"
        android:textSize="24sp"
        android:layout_marginTop="50dp"
        android:textColor="#ff1f00ff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numPoints_text"
        android:id="@+id/numPoints_text"
        android:layout_gravity="start|top"
        android:textSize="24sp"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:textColor="#ff1f00ff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/letter_text"
        android:id="@+id/letter_text"
        android:layout_gravity="center_horizontal|top"
        android:textSize="100sp"
        android:layout_marginTop="100dp"
        android:textColor="#ff1f00ff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/animalName_text"
        android:layout_gravity="center"
        android:hint="@string/animalName_text"
        android:lines="1"
        android:inputType="text"
        android:textColor="#ff1f00ff"
        android:textColorHint="#ff1f00ff"
        android:textColorHighlight="#ffd9ff47" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:id="@+id/verify_button"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:onClick="verify"
        android:background="@mipmap/button_animal"
        android:textSize="20sp"
        android:textColor="#ff1f00ff"
        android:paddingLeft="40dp"
        android:paddingTop="30dp"
        android:paddingRight="40dp"
        android:paddingBottom="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:id="@+id/pass_button"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="80dp"
        android:onClick="pass"
        android:background="@mipmap/button_animal"
        android:textSize="20sp"
        android:textColor="#ff1f00ff"
        android:paddingLeft="50dp"
        android:paddingTop="30dp"
        android:paddingRight="50dp"
        android:paddingBottom="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/countdown_text"
        android:layout_gravity="end|top"
        android:textSize="36sp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="#ff1f00ff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/gameScreen_button"
        android:layout_gravity="end|top"
        android:onClick="goBackToStartScreen"
        android:background="@mipmap/button_animal"
        android:textSize="12sp"
        android:textColor="#ff1f00ff"
        android:paddingLeft="30dp"
        android:paddingTop="20dp"
        android:paddingRight="30dp"
        android:paddingBottom="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules"
        android:id="@+id/playerRules_button"
        android:layout_gravity="center_horizontal|top"
        android:onClick="readRules"
        android:background="@mipmap/button_animal"
        android:textColor="#ff1f00ff"
        android:textSize="12sp"
        android:paddingLeft="30dp"
        android:paddingTop="20dp"
        android:paddingRight="30dp"
        android:paddingBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"/>


</FrameLayout>