<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/switchPlayerLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.animalgame.fragment.SwitchPlayerFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/playedAnimalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        android:gravity="center_vertical"
        android:text="@string/default_animal_name"
        android:textColor="@color/textBlue"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/playedAnimalImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/no_animal_image" />

    <TextView
        android:id="@+id/funFactTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:text="@string/default_fun_fact"
        android:textColor="@color/textBlue"
        android:textSize="24sp" />

    <Button
        android:id="@+id/nextPlayerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@drawable/button"
        android:onClick="goToNextPlayer"
        android:text="@string/next_player"
        android:textColor="@color/textYellow"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>
