<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.animalgame.fragment.AnimalDatabaseFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/addAnimalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:contentDescription="@string/add_animal"
                android:onClick="goToAddAnimalScreen"
                android:padding="10dp"
                android:src="@drawable/ic_add_animal"
                android:tooltipText="@string/add_animal" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/resetAnimalDatabase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@drawable/button"
                android:onClick="resetAnimalDatabase"
                android:paddingBottom="14dp"
                android:paddingLeft="12dp"
                android:paddingRight="8dp"
                android:paddingTop="9dp"
                android:src="@drawable/ic_refresh_database" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/goBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/button"
                android:contentDescription="@string/back"
                android:onClick="goToStartGameScreen"
                android:padding="10dp"
                android:src="@drawable/ic_arrow_left"
                android:tooltipText="@string/back" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/findAnimalEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/default_find_animal_text"
                android:inputType="textPersonName"
                android:textColor="@color/textBlue"
                android:textColorHighlight="@color/highlightMauve"
                android:textColorHint="@color/evenGray"
                android:textSize="20sp"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:textStyle="italic" />

            <ImageButton
                android:id="@+id/findAnimalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button"
                android:contentDescription="@string/find_animal"
                android:onClick="findAnimal"
                android:padding="10dp"
                android:src="@drawable/ic_search"
                android:tooltipText="@string/find_animal" />

            <ImageButton
                android:id="@+id/refreshButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:contentDescription="@string/refresh"
                android:minHeight="40dp"
                android:minWidth="40dp"
                android:onClick="refreshAnimalList"
                android:padding="10dp"
                android:src="@drawable/ic_redo_alt"
                android:tooltipText="@string/refresh" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/animalListScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.50">

            <LinearLayout
                android:id="@+id/animalListLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>
